--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,6 @@
 			text-align: center;
 			font-size: 20px;
 		}
-		img
-		{
-			max-width: 100% ;
-			height: auto;
-			size: inherit;
-			display: block;
-		}
 		#img-div
 		{ 
 			padding: 10px;
@@ -44,10 +37,9 @@
 		}
 		#image
 		{
-			margin: auto;
-			display: flex;
 			max-width: 100%;
-			height: auto;
+  			height: auto;
+  			display: block;
 		}
 		#img-caption
 		{
@@ -66,7 +58,7 @@
 			text-align: center;
 			margin: 50px 0;
 		}
-		ul, .qoute
+		ul, .quote
 		{
 			max-width: 550px;
 			margin: 0 auto 50px auto;
