--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,12 @@
 			border-radius: 5px;
 			box-shadow: 0 0 16px black;
 		}
-		@media (max-width: 460)
+		@media (max-width: 320px)
 		{
 			#main
 			{
 				margin: 0;
-                                font-size: 20px;
+                                font-size: 10px;
 			}
 		}
 		#title
