--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 		body
 		{
 			font-family: 'Lato', sans-serif;
@@ -16,12 +15,16 @@
 			border-radius: 5px;
 			box-shadow: 0 0 16px black;
 		}
-		@media (max-width: 460px)
+		@media (min-width: 1000px)
 		{
 			#main
 			{
 				margin: 0;
-                                font-size: 10px;
+				font-size: 16px;
+			}
+			ul, .quote
+			{
+				max-width: 550px;
 			}
 		}
 		#title
@@ -41,7 +44,7 @@
 			max-width: 100%;
   			height: auto;
   			display: block;
-			margin: auto;
+  			margin: auto;
 		}
 		#img-caption
 		{
@@ -62,7 +65,7 @@
 		}
 		ul, .quote
 		{
-			max-width: 550px;
+		/*	max-width: 550px;*/
 			margin: 0 auto 50px auto;
 			text-align: left;
 		}
